--- a/movie-info-service/src/main/resources/application.properties
+++ b/movie-info-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8082
 spring.application.name=movie-info-service
 
+#api.key=cea3b7a@b21@db1ea9f3707365849dd8
+
+eureka.client.register-with-eureka=false
+
+eureka.client.fetch-registry=false
