--- a/ratings-data-service/src/main/resources/application.properties
+++ b/ratings-data-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8083
 spring.application.name=ratings-data-service
 
+eureka.client.register-with-eureka=false
 
+eureka.client.fetch-registry=false
