load balancing with naming server

--- a/feign-client-service/src/main/resources/application.properties
+++ b/feign-client-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-server.port: 8090
-spring.application.name=feign-client
+server.port:8090
+spring.application.name=feign-client-service
+
+#feign-client-data.ribbon.listOfServers=http://localhost:9001,http://localhost:9002
