--- a/feign-client-service/build.gradle
+++ b/feign-client-service/build.gradle
@@ -28,8 +28,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-    compileOnly 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+//	runtimeOnly group: 'com.netflix.ribbon', name: 'ribbon-loadbalancer', version: '2.3.0'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '2.2.4.RELEASE'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
