loggers added and changes application property

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+
 eureka.client.register-with-eureka=false
 server.port=8761
 spring.application.name=discovery-server
+
+#For loggin levels
+logging.level.root=INFO
+logging.level.io.javabrains=TRACE
