--- a/feign-client-data/src/main/resources/application.properties
+++ b/feign-client-data/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-server.port:9004
+server.port:9001
 spring.application.name=feign-client-data
+
+#For loggin levels
+logging.level.root=INFO
+logging.level.io.javabrains=TRACE
