--- a/feign-client-service/src/main/resources/application.properties
+++ b/feign-client-service/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port:8090
 spring.application.name=feign-client-service
 
 #feign-client-data.ribbon.listOfServers=http://localhost:9001,http://localhost:9002
+
+#For loggin levels
+logging.level.root=INFO
+logging.level.io.javabrains=TRACE
