--- a/movie-info-service/src/main/resources/application.properties
+++ b/movie-info-service/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=movie-info-service
 
 #api.key=cea3b7a@b21@db1ea9f3707365849dd8
 
-eureka.client.register-with-eureka=false
-
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 eureka.client.fetch-registry=false
+
+#For loggin levels
+logging.level.root=INFO
+logging.level.io.javabrains=TRACE
