--- a/spring-cloud-config-client/src/main/resources/application.properties
+++ b/spring-cloud-config-client/src/main/resources/application.properties
@@ -23,3 +23,8 @@ management.endpoint.web.exposure.includes=*
 # for fetching the values from config server (centralized configuration)
 spring.config.import=configserver:http://localhost:8889
 #spring.cloud.config.uri=http://localhost:8889
+
+#For loggin levels
+logging.level.root=INFO
+logging.level.io.javabrains=TRACE
+
