--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.application.name=spring-cloud-config-server
 server.port=8889
 
 #Where it lookup for config values
-spring.cloud.config.server.git.uri=file:///C:/Users/EXCEL/Documents/STS_workspace/ConfigRepo
+#spring.cloud.config.server.git.uri=file:///C:/Users/EXCEL/Documents/STS_workspace/ConfigRepo
+spring.cloud.config.server.git.uri=file://D:/STS_Workspace/git-repo
