--- a/movie-catalog-service/src/main/resources/application.properties
+++ b/movie-catalog-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8081
 spring.application.name=movie-catalog-service
 
+#For loggin levels
+logging.level.root=INFO
+logging.level.io.javabrains=TRACE
+
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
