--- a/ratings-data-service/src/main/resources/application.properties
+++ b/ratings-data-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8083
 spring.application.name=ratings-data-service
 
-eureka.client.register-with-eureka=false
-
 eureka.client.fetch-registry=false
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
+#For loggin levels
+logging.level.root=INFO
+logging.level.io.javabrains=TRACE
