implemented centralize configuration in all microservices

--- a/feign-client-data/src/main/resources/application.properties
+++ b/feign-client-data/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port:9001
 spring.application.name=feign-client-data
 
-#For loggin levels
-logging.level.root=INFO
-logging.level.io.javabrains=TRACE
+#Actuator endpoint
+#management.endpoint.web.exposure.includes="*"
+
+# for fetching the values from config server (centralized configuration)
+spring.config.import=configserver:http://localhost:9999
