--- a/feign-client-service/src/main/resources/application.properties
+++ b/feign-client-service/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-server.port:8090
+server.port:8085
 spring.application.name=feign-client-service
 
 #feign-client-data.ribbon.listOfServers=http://localhost:9001,http://localhost:9002
 
-#For loggin levels
-logging.level.root=INFO
-logging.level.io.javabrains=TRACE
+#Actuator endpoint
+#management.endpoint.web.exposure.includes="*"
+
+# for fetching the values from config server (centralized configuration)
+spring.config.import=configserver:http://localhost:9999
+
