--- a/movie-catalog-service/src/main/resources/application.properties
+++ b/movie-catalog-service/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-server.port=8081
 spring.application.name=movie-catalog-service
 
-#For loggin levels
-logging.level.root=INFO
-logging.level.io.javabrains=TRACE
+##For loggin levels
+#logging.level.root=INFO
+#logging.level.io.javabrains=TRACE
 
 #eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
+#management.endpoints.web.exposure.include=include: hystrix.stream
+
+# for actuator
+#management.endpoint.web.exposure.includes="*"
+
+# for fetching the values from config server (centralized configuration)
+spring.config.import=configserver:http://localhost:9999
