--- a/spring-cloud-config-client/src/main/resources/application-test.properties
+++ b/spring-cloud-config-client/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-server.port=8888
+server.port=9998
 my.greeting=Hello from properties file - test
 
 app.name=MyAppName-test
@@ -10,7 +10,7 @@ my.list.names=one-test,two-test,three-test
 dbValues={Url:'https://localhost____-test' ,username:'root-test',password:'root-test'}
 
 db.host=localhost-test
-db.port=8888--test
+db.port=8888-test
 db.connection={Url:'https://${db.host}:/3306' ,username:'root-test',password:'root-test'}
 
 management.endpoint.web.exposure.includes=*
