--- a/spring-cloud-config-client/src/main/resources/application.properties
+++ b/spring-cloud-config-client/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=spring-cloud-config
 
 #spring.profiles.active=test
-server.port=8888
 
-my.greeting=Hello from properties file - test
+my.greeting=Hello from properties file 
 
 app.name=MyAppName
 
@@ -17,14 +16,11 @@ db.host=localhost
 db.port=8888-
 db.connection={Url:'https://${db.host}:/3306' ,username:'root',password:'root'}
 
-management.endpoint.web.exposure.includes=*
-
+##Actuator endpoint
+#management.endpoint.web.exposure.includes="*"
 
 # for fetching the values from config server (centralized configuration)
-spring.config.import=configserver:http://localhost:8889
+spring.config.import=configserver:http://localhost:9999
 #spring.cloud.config.uri=http://localhost:8889
-
-#For loggin levels
-logging.level.root=INFO
-logging.level.io.javabrains=TRACE
+#spring.cloud.config.import-check.enabled=false
 
