--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 #http://localhost:8889/<file-name> not extension /profileName
 
 spring.application.name=spring-cloud-config-server
-server.port=8889
+server.port=9999
 
 #Where it lookup for config values
 #spring.cloud.config.server.git.uri=file:///C:/Users/EXCEL/Documents/STS_workspace/ConfigRepo
-spring.cloud.config.server.git.uri=file://D:/STS_Workspace/git-repo
+#spring.cloud.config.server.git.uri=file://D:/STS_Workspace/git-repo
+spring.cloud.config.server.git.uri=https://github.com/rajeevloghade/git-repo-centralized-config.git
