--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 
-eureka.client.register-with-eureka=false
-server.port=8761
+#eureka.client.register-with-eureka=false
+#server.port=8761
 spring.application.name=discovery-server
 
-#For loggin levels
-logging.level.root=INFO
-logging.level.io.javabrains=TRACE
+#Actuator endpoint
+#management.endpoint.web.exposure.includes="*"
+
+# for fetching the values from config server (centralized configuration)
+spring.config.import=configserver:http://localhost:9999
+#spring.cloud.config.uri=http://localhost:8889
