--- a/movie-info-service/src/main/resources/application.properties
+++ b/movie-info-service/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-server.port=8082
 spring.application.name=movie-info-service
 
 #api.key=cea3b7a@b21@db1ea9f3707365849dd8
 
 #eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
-eureka.client.fetch-registry=false
+#eureka.client.fetch-registry=false
 
-#For loggin levels
-logging.level.root=INFO
-logging.level.io.javabrains=TRACE
+# for actuator
+#management.endpoint.web.exposure.includes="*"
+
+# for fetching the values from config server (centralized configuration)
+spring.config.import=configserver:http://localhost:9999
