--- a/ratings-data-service/src/main/resources/application.properties
+++ b/ratings-data-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8083
 spring.application.name=ratings-data-service
 
-eureka.client.fetch-registry=false
 #eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
-#For loggin levels
-logging.level.root=INFO
-logging.level.io.javabrains=TRACE
+# for actuator
+#management.endpoint.web.exposure.includes="*"
+
+# for fetching the values from config server (centralized configuration)
+spring.config.import=configserver:http://localhost:9999
